--- a/src/components/Model-3.astro
+++ b/src/components/Model-3.astro
@@ -1,35 +1,26 @@
-<section
-    class="landing-section charge-text-white font-gotham font-medium h-screen w-screen bg-black text-center relative"
-    data-header-color="black"
->
-    <div class="z-30 relative h-full flex flex-col">
-        <h2 class="text-gray-900 pt-28 text-[40px] font-medium leading-[48px]">
-            Model 3
-        </h2>
-    </div>
+---
+import Section from "./Section.astro";
+---
 
-    <footer class="absolute bottom-0 left-0 right-0 z-40 mobile:mx-5">
-        <div>
-            <a
-                class="border-[3px] border-black bg-black text-sm rounded font-medium text-white px-12 py-2 inline-block hover:bg-white hover:text-black transition-colors mb-20 mobile:w-full mobile:mb-10"
-                href="#"
-            >
-                Orden personalizada
-            </a>
-            <a
-                class="border-[3px] border-white bg-white/5 text-sm rounded font-medium text-black px-12 py-2 inline-block hover:bg-white hover:text-black transition-colors mb-20 ml-4 mobile:w-full mobile:ml-0"
-                href="#"
-            >
-                Demostración de manejo
-            </a>
-        </div>
-    </footer>
-
-    <div class="absolute top-0 bottom-0 left-0 right-0 z-0">
-        <img
-            src="/public/Model-3.avif"
-            alt=""
-            class="object-cover object-center h-full w-full"
-        />
+<Section title="Model 3" color = "black">
+    <div slot="footer" class="gap-x-6">
+        <a
+            class="border-[3px] border-black bg-gray-800 text-sm rounded font-medium text-white px-12 py-2 inline-block hover:bg-white hover:text-black transition-colors mb-20 mobile:w-full mobile:mb-10"
+            href="#"
+        >
+            Orden personalizada
+        </a>
+        <a
+            class="border-[3px] border-white bg-white/5 text-sm rounded font-medium text-black px-12 py-2 inline-block hover:bg-white hover:text-black transition-colors mb-20 ml-4 mobile:w-full mobile:ml-0"
+            href="#"
+        >
+            Demostración de manejo
+        </a>
     </div>
-</section>
+    <img
+        slot="background"
+        src="/public/Model-y.avif"
+        alt=""
+        class="object-cover h-screen w-screen"
+    />
+</Section>
