--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -3,7 +3,7 @@ const { color, title, subtitle } = Astro.props;
 const textColor = `text-${color}`;
 ---
 <section
-	class={`font-gotham font-medium h-screen w-screen bg-black text-center relative ${textColor}`}
+	class={`landing-section font-gotham font-medium h-screen w-screen bg-black text-center overflow-hidden relative ${textColor}`}
 	data-header-color={color}
 >
 	<div class="z-30 relative h-full flex flex-col">
