--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -21,5 +21,5 @@ subtitle="Agenda una demostración de manejo hoy"
     autoplay
     muted
     loop
-    src="../../public/public_video.webm"></video>
+    src="/public_video.webm"></video>
 </Section>
