--- a/src/components/Model-X.astro
+++ b/src/components/Model-X.astro
@@ -23,7 +23,7 @@ import Section from "./Section.astro";
     </div>
     <img
         slot="background"
-        src="/public/Model-X.avif"
+        src="/Model-X.avif"
         alt=""
         class="object-cover h-screen w-screen"
     />
