--- a/src/components/Model-y.astro
+++ b/src/components/Model-y.astro
@@ -19,7 +19,7 @@ import Section from "./Section.astro";
     </div>
     <img
         slot="background"
-        src="/public/Model-y.avif"
+        src="/Model-y.avif"
         alt=""
         class="object-cover h-screen w-screen"
     />
