Fix: Interface mobile

--- a/src/components/Model-3.astro
+++ b/src/components/Model-3.astro
@@ -3,7 +3,7 @@ import Section from "./Section.astro";
 ---
 
 <Section title="Model 3" color = "black">
-    <div slot="footer" class="gap-x-6">
+    <div slot="footer" class="gap-x-6 mx-24">
         <a
             class="border-[3px] border-black bg-gray-800 text-sm rounded font-medium text-white px-12 py-2 inline-block hover:bg-white hover:text-black transition-colors mb-20 mobile:w-full mobile:mb-10"
             href="#"
