--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import ModelX from "../components/Model-X.astro";
 
 <Layout title="Tesla Landing">
 	<LandingHeader />
-	<main class="snap-y snap-mandatory relative w-full h-screen overflow-auto">
+	<main class="snap-y snap-mandatory relative w-full h-screen overflow-auto overflow-x-hidden" style="scroll-behavior: smooth;">
 		<div class="snap-center">
 			<HeroSection />
 		</div>
