--- a/src/components/Model-y.astro
+++ b/src/components/Model-y.astro
@@ -3,7 +3,7 @@ import Section from "./Section.astro";
 ---
 
 <Section color="black" title="Model Y">
-    <div slot="footer">
+    <div slot="footer" class="mx-24">
         <a
             class="border-[3px] border-black bg-black text-sm rounded font-medium text-white px-12 py-2 inline-block hover:bg-white hover:text-black transition-colors mb-20 mobile:w-full mobile:mb-10"
             href="#"
