Fix: Powerwall section and buttons

--- a/src/components/Powerwall.astro
+++ b/src/components/Powerwall.astro
@@ -4,26 +4,20 @@ import Section from "./Section.astro";
 
 <Section
     color="black"
-    title="Model X"
-    subtitle="Programe una demostración de manejo"
+    title="Energía solar y Powerwall"
+    subtitle="Totalmente eléctrico"
 >
-    <div slot="footer">
+    <div slot="footer" class="mx-20">
         <a
-            class="border-[3px] border-black bg-black text-sm rounded font-medium text-white px-12 py-2 inline-block hover:bg-white hover:text-black transition-colors mb-20 mobile:w-full mobile:mb-10"
-            href="#"
+        class="border-[3px] border-white bg-white/5 backdrop-blur-sm text-sm rounded font-medium text-white px-12 py-2 inline-block hover:bg-white hover:text-black transition-colors mb-20"
+        href="#"
         >
-            Orden personalizada
-        </a>
-        <a
-            class="border-[3px] border-white bg-white/5 text-sm rounded font-medium text-black px-12 py-2 inline-block hover:bg-white hover:text-black transition-colors mb-20 ml-4 mobile:w-full mobile:ml-0"
-            href="#"
-        >
-            Ver inventario
+        Mas información
         </a>
     </div>
     <img
         slot="background"
-        src="/Powerwall.avif"
+        src="/public/Powerwall.avif"
         alt=""
         class="object-cover h-screen w-screen"
     />
