--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Model3 from "../components/Model-3.astro";
 import ModelY from "../components/Model-y.astro";
 import ModelS from "../components/Model-S.astro";
 import ModelX from "../components/Model-X.astro";
+import Powerwall from "../components/Powerwall.astro";
 ---
 
 <Layout title="Tesla Landing">
@@ -28,26 +29,7 @@ import ModelX from "../components/Model-X.astro";
 			<ModelX />
 		</div>
 		<div class="snap-center">
-			<Section
-				color="black"
-				title="Energía solar y Powerwall"
-				subtitle="Totalmente eléctrico"
-			>
-				<div slot="footer">
-					<a
-						class="border-[3px] border-white bg-white/5 backdrop-blur-sm text-sm rounded font-medium text-white px-12 py-2 inline-block hover:bg-white hover:text-black transition-colors mb-20"
-						href="#"
-					>
-						Mas información
-					</a>
-				</div>
-				<img
-					slot="background"
-					src="/public/Powerwall.avif"
-					alt=""
-					class="object-cover h-screen w-screen"
-				/>
-			</Section>
+			<Powerwall />
 		</div>
 	</main>
 </Layout>
