--- a/src/components/Powerwall.astro
+++ b/src/components/Powerwall.astro
@@ -17,7 +17,7 @@ import Section from "./Section.astro";
     </div>
     <img
         slot="background"
-        src="/public/Powerwall.avif"
+        src="/Powerwall.avif"
         alt=""
         class="object-cover h-screen w-screen"
     />
